<resources>
    <string name="app_name">SaparLine</string>

    <string name="default_notification_channel_id" translatable="false">SaparLine Notification</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="notification_chanel">Notification</string>
    <string name="notification_desc">All notifications</string>
    <string name="empty_data">Empty data</string>
    <string name="empty_data_description">You have not data yet.\nPlease try again later.</string>
    <string name="empty_error">Oops!</string>
    <string name="empty_error_description">Something went wrong.\nPlease try again later.</string>
    <string name="refresh">Refresh</string>
    <string name="unknown_error">Unknown error</string>
    <string name="network_error">Network error</string>
    <string name="not_modified_error">304 Not Modified</string>
    <string name="bad_request_error">400 Bad Request</string>
    <string name="unauthorized_error">401 Unauthorized</string>
    <string name="forbidden_error">403 Forbidden</string>
    <string name="not_found_error">404 Not Found</string>
    <string name="method_not_allowed_error">405 Method Not Allowed</string>
    <string name="conflict_error">409 Conflict</string>
    <string name="unprocessable_error">422 Unprocessable</string>
    <string name="server_error_error">500 Server Error</string>
    <string name="timeout_error">TimeOut Exception</string>
    <string name="rationale_external_storage_permission">Need permission</string>

    <string name="next">Далее</string>
    <string name="confirm">Подтвердить</string>
    <string name="skip">Пропустить</string>
    <string name="home">Главная</string>
    <string name="search_result">Результаты поиска</string>
    <string name="booking">Бронирование мест</string>
    <string name="driver">Водитель</string>
    <string name="passenger">Пассажир</string>
    <string name="fill_field">Заполните поле</string>
    <string name="fill_all_field">Заполните все поля</string>
    <string name="fill_from_date">Заполните дату отправки</string>
    <string name="ready">Готово</string>
    <string name="places">мест</string>
    <string name="price_value">%s ₸</string>
    <string name="become_passenger">Стать пассажиром</string>
    <string name="become_driver">Стать водителем</string>
    <string name="profile">Профиль</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="empty_list">Список пуст</string>

    <string name="auth_comeback">С возвращением!</string>
    <string name="auth_if_account_exist">Если у вас уже есть аккаунт, введите\nданные чтобы войти</string>
    <string name="auth_phone">Ваш номер телефона</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_forget_password">Забыли пароль?</string>
    <string name="auth_restore">Восстановить</string>
    <string name="auth_sign_in">Войти</string>
    <string name="auth_create_account">Создать аккаунт</string>
    <string name="auth_welcome">Добро пожаловать!</string>
    <string name="auth_restore_password">Восстановление пароля</string>
    <string name="auth_create_text">Создайте личный аккаунт, заполнив\nнеоходимые поля ввода</string>
    <string name="auth_confirm_password">Подтвердить пароль</string>
    <string name="auth_policy">Я согласен с условиями использования и политикой конфиденциальности</string>
    <string name="auth_phone_confirm">Подтверждение номера</string>
    <string name="auth_sms_text">Введите код из 4 цифры, который мы вам\nотправили на номер</string>
    <string name="auth_sms_re_send">Отправить код повторно</string>
    <string name="auth_customer_confirm">Осталось совсем немного. Вы можете\nпропустить последний шаг</string>
    <string name="auth_driver_confirm">Осталось совсем немного</string>
    <string name="auth_name">Имя</string>
    <string name="bank_name">Имя на карте</string>
    <string name="auth_last_name">Фамилия</string>
    <string name="auth_state_number">Гос номер</string>
    <string name="auth_address">Адрес</string>
    <string name="auth_transport_type">Тип транспорта</string>
    <string name="auth_comfort">Удобства</string>
    <string name="auth_upload_1">Загрузите фото тех паспорта</string>
    <string name="auth_upload_2">Загрузите фото водительских прав</string>
    <string name="auth_upload_3">Загрузите фото транспорта внутри</string>
    <string name="auth_upload_4">Загрузите фото транспорта спереди</string>
    <string name="auth_admin_confirm">Ваш аккаунт в процессе подтверждения, подождите пока администрация подтвердит ваши данные</string>
    <string name="auth_bus_driver">Водитель автобуса</string>
    <string name="auth_wrong_phone_format">Не правильный формат телефона</string>
    <string name="auth_passwords_not_same">Пароли не совпадают</string>
    <string name="auth_agree_with_policy">Вам нужно согласиться с политикой конфидициальности</string>
    <string name="auth_city">Город</string>
    <string name="auth_inactive_disable">Ваш аккаунт в процессе подтверждения, подождите пока администрация подтвердит ваши данные</string>
    <string name="auth_edited">Профиль изменен</string>
    <string name="auth_wrong_sms_code">Не верный смс код</string>

    <string name="order_book">Забронировать</string>
    <string name="order_price_one_place">Выберите промежуток мест:</string>
    <string name="order_set_city">По возможности укажите область; город/районный центр; и пункт выезда</string>
    <string name="order_from">Откуда</string>
    <string name="order_to">Куда</string>
    <string name="order_choose_date">Выберите дату</string>
    <string name="order_choose_date_from">Выберите дату отправки</string>
    <string name="order_choose_date_to">Выберите дату прибытия</string>
    <string name="order_baggage">Багаж</string>
    <string name="order_place_number">Количество необходимых мест</string>
    <string name="order_find_ticket">Найти билеты</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="order_television">Телевизор</string>
    <string name="order_air_condition">Кондиционер</string>
    <string name="order_baggage_20_kg">Багаж 20кг</string>
    <string name="order_car_number_">Номер авто </string>
    <string name="order_place_number_">Номер места </string>
    <string name="order_code_">Код:</string>
    <string name="order_total_price">Сумма поездки</string>
    <string name="order_choose_stations">Выберите откуда, куда и время поездки</string>
    <string name="order_people">%s человек</string>
    <string name="order_free_place_exist">Есть свободные места</string>
    <string name="order_duration">%02d ч. %02d мин</string>
    <string name="order_stations">Промежуточные остановки</string>
    <string name="order_place_price_">Цена за место:</string>
    <string name="order_price_from">От</string>
    <string name="order_price_to">До</string>
    <string name="order_from_to_place">От %d до %d мест</string>
    <string name="order_add_price">Добавить цену</string>
    <string name="order_booking_date">Дата бронирования</string>
    <string name="order_travel_number">Номер места</string>
    <string name="order_place_count">Количество мест</string>
    <string name="order_state_number">Номер авто</string>
    <string name="order_choose_both_cities">Сперва выберите обе города</string>
    <string name="order_id_place">Места</string>
    <string name="order_id_user">ID пользователя</string>
    <string name="order_sum">Сумма поездки</string>
    <string name="order_transfer_info">Эти данные нужно ввести в сообщении при переводе денег</string>
    <string name="order_transfer_info_kaspi">До истечения брони</string>
    <string name="order_payment">К оплате</string>
    <string name="order_details">Детализация поездки</string>

    <string name="booking_your_seat">Ваше место</string>
    <string name="booking_free">Свободно</string>
    <string name="booking_not_free">Занятые</string>
    <string name="booking_in_process">В процессе</string>
    <string name="booking_payment_sum_">Сумма к оплате:</string>
    <string name="booking_seat">Забронировать место</string>
    <string name="booking_publish">Опубликовать</string>
    <string name="booking_canceled">Отказано</string>

    <string name="menu_home">Главная</string>
    <string name="menu_list_travels">История поездок</string>
    <string name="menu_add_bus">Добавить транспорт</string>
    <string name="menu_my_passengers">Мои пассажиры</string>
    <string name="menu_upcoming_travels">Плановые поездки</string>
    <string name="menu_tickets">Билеты</string>
    <string name="menu_transport">Список транспортов</string>

    <string name="profile_edit">Редактировать</string>
    <string name="profile_notification">Уведомления</string>
    <string name="profile_sound">Звук</string>
    <string name="profile_language">Язык</string>
    <string name="profile_share_app">Поделиться</string>
    <string name="profile_about">О приложении</string>
    <string name="profile_sign_out">Выйти</string>
    <string name="profile_ru">Русский</string>
    <string name="profile_kz">Қазақша</string>

    <string name="sms_code">Смс код</string>
    <string name="passwords_not_same">Пароли не совпадают</string>
    <string name="password_restored">Пароль успешно изменен</string>
    <string name="restore">Восстановить</string>
    <string name="order_free_places">Свободных мест</string>
    <string name="several_days">На несколько дней</string>
    <string name="additional_date">Дополнительная дата</string>
    <string name="wrong_date">Вы не можете выбрать эту дату</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="are_you_sure">Вы действительно хотите забронировать место</string>
    <string name="are_you_sure_cancel">Вы действительно хотите отменить бронирование место</string>
    <string name="are_you_sure_return_ticket">В случае возврата билета будет удержана 50% от суммы</string>
    <string name="take_back_ticket">Вернуть билет</string>
    <string name="contact">Контакты</string>
    <string name="whatsapp_text">https://wa.me/%s?text=Мой номер брони %s, номер автобуса %s</string>
    <string name="book">Забронировать</string>
    <string name="out">Вы действительно хотите выйти?</string>
    <string name="delete">Удалить</string>
    <string name="delete_upcoming_travel">Удалить поездку?</string>
    <string name="empty_travel">К сожалению на сегодня нет поездок выберите другой день</string>
    <string name="phone">Телефон</string>
    <string name="buy_date">Время покупки</string>
    <string name="transfer_number">Номер для перевода Kaspi Gold %s</string>
    <string name="reserve_number">Номер брони</string>
    <string name="order_numver_kaspi">Номер для перевода</string>
    <string name="duration_road">в пути %s*</string>
    <string name="sleeping_room">спальный салон</string>
    <string name="car_36_description">* 1 - 16 места - нижний / 17 - 32 места- верхний/ \n33 - 36 места- передний топчан</string>
    <string name="car_description">* 1 - 1 переднее место</string>
    <string name="rate_your_trip">Оцените вашу поездку</string>
    <string name="feedback_text">Ваше мнение помогает другим людям выбрать хороший транспорт</string>
    <string name="send">Отправить</string>
    <string name="sort">Сортировать</string>
    <string name="choose_transport">Выберите транспорт</string>
    <string name="clean">Чистота машины</string>
    <string name="action_driver">Поведение водителя</string>
    <string name="punctuality">Пунктуальность</string>
    <string name="see">Просмотреть</string>
    <string name="time">Время</string>
    <string name="number_feedback">%.1f</string>
    <string name="pay">Оплатить</string>
</resources>