<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintVertical_bias="0.35"
            android:textSize="20sp"
            android:text="@string/auth_comeback"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/colorGrey"
            android:text="@string/auth_if_account_exist"/>

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/edtPhoneSignIn"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="50dp"
            android:drawableStart="@drawable/ic_1"
            android:hint="@string/auth_phone"
            android:textColorHint="@color/colorText"
            app:mask="8 (___) ___ __ __"
            app:maskCharacter="_"
            app:maskStyle="completable"
            android:inputType="number"/>

        <EditText
            android:id="@+id/edtPasswordSignIn"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            app:layout_constraintTop_toBottomOf="@id/edtPhoneSignIn"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_2"
            android:hint="@string/auth_password"
            android:textColorHint="@color/colorText"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/txtRestoreSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtPasswordSignIn"
            app:layout_constraintEnd_toEndOf="@id/edtPasswordSignIn"
            android:padding="10dp"
            android:text="@string/auth_restore"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/txtRestoreSignIn"
            app:layout_constraintBottom_toBottomOf="@id/txtRestoreSignIn"
            app:layout_constraintEnd_toStartOf="@id/txtRestoreSignIn"
            android:text="@string/auth_forget_password"
            android:textColor="@color/colorGrey"/>

        <Button
            android:id="@+id/btnSignInSignIn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            app:layout_constraintTop_toBottomOf="@id/txtRestoreSignIn"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/auth_sign_in"/>

        <Button
            android:id="@+id/btnCreateAccountSignIn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            app:layout_constraintTop_toBottomOf="@id/btnSignInSignIn"
            app:layout_constraintStart_toStartOf="@id/btnSignInSignIn"
            app:layout_constraintEnd_toEndOf="@id/btnSignInSignIn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            android:text="@string/auth_create_account"
            android:background="@drawable/skin_grey_corner"
            android:textColor="@color/colorText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>