<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintVertical_bias="0.25"
            android:textSize="22sp"
            android:text="@string/auth_restore_password"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/colorGrey"
            android:visibility="gone"
            android:text="@string/auth_create_text"/>

        <EditText
            android:id="@+id/edtCodeRP"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/ic_2"
            android:hint="@string/sms_code"
            android:textColorHint="@color/colorText"
            android:inputType="numberPassword"
            android:maxLength="4"/>

        <EditText
            android:id="@+id/edtPasswordRP"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            app:layout_constraintTop_toBottomOf="@id/edtCodeRP"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_2"
            android:hint="@string/auth_password"
            android:textColorHint="@color/colorText"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/edtConfirmPasswordRP"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            app:layout_constraintTop_toBottomOf="@id/edtPasswordRP"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_2"
            android:hint="@string/auth_confirm_password"
            android:textColorHint="@color/colorText"
            android:inputType="textPassword"/>
        

        <Button
            android:id="@+id/btnNextRP"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            app:layout_constraintTop_toBottomOf="@id/edtConfirmPasswordRP"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"
            android:text="@string/restore"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>