<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintVertical_bias="0.2"
            android:textSize="20sp"
            android:text="@string/auth_phone_confirm"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/colorGrey"
            android:text="@string/auth_customer_confirm"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatarCustomerConfirm"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_4"
            android:scaleType="centerCrop"/>

        <EditText
            android:id="@+id/edtNameCustomerConfirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            app:layout_constraintTop_toBottomOf="@id/imgAvatarCustomerConfirm"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="50dp"
            android:drawableStart="@drawable/ic_1"
            android:hint="@string/auth_name"
            android:textColorHint="@color/colorText"/>

        <EditText
            android:id="@+id/edtLastNameCustomerConfirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            app:layout_constraintTop_toBottomOf="@id/edtNameCustomerConfirm"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_1"
            android:hint="@string/auth_last_name"
            android:textColorHint="@color/colorText"/>

        <TextView
            android:id="@+id/txtAddressCustomerConfirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            app:layout_constraintTop_toBottomOf="@id/edtLastNameCustomerConfirm"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/auth_city"
            android:textColorHint="@color/colorText"
            app:drawableStartCompat="@drawable/ic_5"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnConfirmCustomerConfirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            app:layout_constraintTop_toBottomOf="@id/txtAddressCustomerConfirm"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/confirm"/>

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            app:layout_constraintTop_toBottomOf="@id/btnConfirmCustomerConfirm"
            app:layout_constraintStart_toStartOf="@id/btnConfirmCustomerConfirm"
            app:layout_constraintEnd_toEndOf="@id/btnConfirmCustomerConfirm"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            android:text="@string/skip"
            android:background="@drawable/skin_grey_corner"
            android:textColor="@color/colorText"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>