<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/additional_date"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/txtDateFromItem"
        android:layout_width="0dp"
        android:layout_height="@dimen/edt_height"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/skin_white_corner"
        android:textColorHint="@color/colorText"
        android:hint="@string/order_choose_date_from"
        android:textColor="@color/colorText"
        app:drawableStartCompat="@drawable/ic_16"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:elevation="10dp"/>

    <TextView
        android:id="@+id/txtDateToItem"
        android:layout_width="0dp"
        android:layout_height="@dimen/edt_height"
        app:layout_constraintTop_toBottomOf="@id/txtDateFromItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/skin_white_corner"
        android:textColorHint="@color/colorText"
        android:hint="@string/order_choose_date_to"
        android:textColor="@color/colorText"
        app:drawableStartCompat="@drawable/ic_16"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:elevation="10dp"/>

    <Button
        android:id="@+id/btnDeleteDateFromTo"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/txtDateToItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>