<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintVertical_bias="0.25"
            android:textSize="22sp"
            android:text="@string/auth_restore_password"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/colorGrey"
            android:visibility="gone"
            android:text="@string/auth_create_text"/>

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/edtPhoneRP"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/ic_1"
            android:textColorHint="@color/colorText"
            android:hint="@string/auth_phone"
            app:mask="8 (___) ___ __ __"
            app:maskCharacter="_"
            app:maskStyle="normal"
            android:inputType="number" />
        
        <Button
            android:id="@+id/btnNextRP"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            app:layout_constraintTop_toBottomOf="@id/edtPhoneRP"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"
            android:text="@string/next"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>